'filter' lag fixed on ios

--- a/css/slider.css
+++ b/css/slider.css
@@ -41,6 +41,8 @@
 
     /* For all the images that are not selected */
     opacity: 0.3;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
     filter: blur(2px);
 }
 
